# graphgitcommits

./: .gitignore  README.md  pyproject.toml
src/graphgitcommits/: __init__.py  cli.py
