[project]
name = "graphgitcommits"
version = "0.1.0"
description = "Visualize git commits by user and time, with flexible aggregation intervals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aron" }]
keywords = ["git", "commits", "visualization", "analysis"]

dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.scripts]
graphgitcommits = "graphgitcommits.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphgitcommits"]

[tool.uv]
dev-dependencies = []
